--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,12 +28,10 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
 
     - name: Install dependencies
       run: |
-        npm init -y
-        npm install --save-dev @pwa-builder/pwabuilder-cli
+        npm install
 
     - name: Generate PWA Icons
       run: |
