FIX PWA Safari Issue: Đường dẫn GitHub Pages đúng
 Root Cause:
- start_url và scope sai: '/' thay vì '/hybrid-tranning/'
- Service Worker paths không đúng với GitHub Pages
- Icon type mismatch (SVG nhưng khai báo PNG)

 Solutions:
- Cập nhật start_url: '/hybrid-tranning/' (Safari sẽ Add to Home Screen đúng URL)
- Cập nhật scope: '/hybrid-tranning/' (PWA boundary đúng)
- Sửa SW registration: '/hybrid-tranning/sw.js'
- Cập nhật tất cả static paths trong SW
- Sửa icon type: 'image/svg+xml' (đúng format file)
- Cập nhật notification paths
- Sửa shortcuts URLs

 Safari Test:
- Vào https://tryhn151.github.io/hybrid-tranning/
- Add to Home Screen sẽ có URL đúng
- Icon và name hiển thị chính xác
- Standalone mode hoạt động

--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name": "Lộ Trình Vận Động Viên Hybrid",
   "short_name": "Hybrid Training",
   "description": "Chương trình tập luyện hybrid kết hợp gym và chạy marathon 16 tuần",
-  "start_url": "/",
+  "start_url": "/hybrid-tranning/",
   "display": "standalone",
   "background_color": "#F8F7F4",
   "theme_color": "#4A6C6F",
   "orientation": "portrait-primary",
-  "scope": "/",
+  "scope": "/hybrid-tranning/",
   "lang": "vi",
   "categories": ["health", "fitness", "sports", "lifestyle"],
   "icons": [
@@ -55,14 +55,14 @@
       "name": "Theo dõi Progress",
       "short_name": "Progress",
       "description": "Xem tiến độ training",
-      "url": "/?shortcut=progress",
+      "url": "/hybrid-tranning/?shortcut=progress",
       "icons": [{ "src": "icons/icon-96x96.png", "sizes": "96x96" }]
     },
     {
       "name": "Lịch tập hôm nay",
       "short_name": "Hôm nay",
       "description": "Lịch tập hôm nay",
-      "url": "/?shortcut=today",
+      "url": "/hybrid-tranning/?shortcut=today",
       "icons": [{ "src": "icons/icon-96x96.png", "sizes": "96x96" }]
     }
   ],
