--- a/manifest.json
+++ b/manifest.json
@@ -12,40 +12,40 @@
   "categories": ["health", "fitness", "sports", "lifestyle"],
   "icons": [
     {
-      "src": "icons/icon-72x72.png",
+      "src": "icons/icon.png",
       "sizes": "72x72",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-96x96.png",
+      "src": "icons/icon.png",
       "sizes": "96x96",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-144x144.png",
+      "src": "icons/icon.png",
       "sizes": "144x144",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-192x192.png",
+      "src": "icons/icon.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "icons/icon.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ],
   "screenshots": [
     {
-      "src": "icons/icon-512x512.png",
-      "type": "image/svg+xml",
+      "src": "icons/icon.png",
+      "type": "image/png",
       "sizes": "512x512",
       "form_factor": "wide"
     }
@@ -56,14 +56,14 @@
       "short_name": "Progress",
       "description": "Xem tiến độ training",
       "url": "/hybrid-tranning/?shortcut=progress",
-      "icons": [{ "src": "icons/icon-96x96.png", "sizes": "96x96" }]
+      "icons": [{ "src": "icons/icon.png", "sizes": "96x96" }]
     },
     {
       "name": "Lịch tập hôm nay",
       "short_name": "Hôm nay",
       "description": "Lịch tập hôm nay",
       "url": "/hybrid-tranning/?shortcut=today",
-      "icons": [{ "src": "icons/icon-96x96.png", "sizes": "96x96" }]
+      "icons": [{ "src": "icons/icon.png", "sizes": "96x96" }]
     }
   ],
   "prefer_related_applications": false,
